<resources>
    <string name="app_name">MoonShot</string>
    <string name="menuLaunchesLabel">Launches</string>
    <string name="menuRocketsLabel">Rockets</string>
    <string name="headerLaunchDetailsHeader">Details</string>
    <string name="headerLaunchImageContentDescription">Image related to the launch</string>
    <string name="headerLaunchMissionPatchContentDescription">Mission patch image</string>
    <string name="launchRocketHeaderText">Rocket</string>
    <string name="launchRocketTypeLabel">Type</string>
    <string name="launchRocketDetailsButtonText">See details</string>
    <string name="headerLaunchDateHeader">Launch Date</string>
    <string name="launchCardHeaderText">Launch</string>
    <string name="launchesFragmentErrorMessage">Error getting launches</string>
    <string name="launchesFragmentLoadingMessage">Loading All Launches</string>
    <string name="nextLaunchFragmentErrorMessage">Error getting next launch</string>
    <string name="nextLaunchFragmentLoadingMessage">Loading next launch</string>
    <string name="launchDetailLaunchSiteHeader">Launch Site</string>
    <string name="launchDetailLaunchDateHeader">Launch Date</string>
    <string name="launchDetailLaunchDetailHeader">Details</string>
    <string name="nextLaunchFragmentNextLaunchHeaderText">Next Launch</string>
    <string name="launchDetailsFragmentLoadingMessage">Loading launch details</string>
    <string name="launchDetailsFragmentRocketSummaryError">Error while loading Rocket Summary</string>
    <string name="launchDetailsFragmentRocketSummaryLoading">Loading rocket summary</string>
    <string name="launchDetailsFragmentLoading">Unable to load launch details</string>
    <string name="launchDetailsFragmentNoLaunchDetailsText">No details available</string>
    <string name="launchDetailsFragmentNoLaunchDateText">Launch date unavailable</string>
    <string name="nextLaunchFragmentNoLaunchDateText">Launch date unavailable</string>
    <string name="launchDetailsFragmentFirstStageSummaryHeader">First Stage</string>
    <string name="launchDetailsFragmentSecondStageSummaryHeader">Second Stage</string>
    <string name="fragmentLauchDetailsNoLaunchSiteMessage">Launch Site unavailable</string>
    <string name="fragmentLaunchDetailsLaunchDateHeader">Launch Date</string>
    <string name="fragmentLaunchDetailsLaunchDetailsHeader">Details</string>
    <string name="fragmentLaunchPadLaunchPadHeader">Launch Pad</string>
    <string name="fragmentLaunchPadDetailsHeader">Details</string>
    <string name="fragmentLaunchPadStatusHeader">Status</string>
    <string name="fragmentLaunchPadLaunchPadErrorMessage">Unable to fetch Launch Pad Details</string>
    <string name="fragmentLaunchPadLaunchPadLoadingMessage">Loading Launch Pad details</string>
    <string name="itemMapCardContentDescription">Static map image of this location</string>
    <string name="itemMapCardMapHeader">Map</string>
    <string name="launchDetailsFragmentRocketSummaryHeaderText">Rocket Summary</string>
    <string name="preferencesNotificationsCategoryTitle">Notifications</string>
    <string name="preferencesNotificationsSwitchTitle">Enable launch notifications</string>
    <string name="preferencesNotificationsSwitchSummary">Get notifications before the next launch takes place</string>
    <string name="preferencesNotificationsMinutesSummary">How many minutes before the launch should we remind you?</string>
    <string name="preferencesNotificationsMinutesTitle">Minutes before launch</string>
    <string name="shortcutLaunchesShortLabel">Launches</string>
    <string name="shortcutRocketsShortLabel">Rockets</string>
    <string name="shortcutSettingsShortLabel">Settings</string>
    <string name="launchDetailsFragmentLinksHeader">Links</string>
    <string name="preferencesUserInterfaceCategoryTitle">User Interface</string>
    <string name="preferencesPrivacyCategoryTitle">Privacy</string>
    <string name="preferencesCrashReportingSummary">Enable automatic crash reporting to help us improve the application</string>
    <string name="preferencesCrashReportRestartMessage">Changing crash reports setting requires a restart</string>
    <string name="itemRocketHeader">Rocket</string>
    <string name="rocketDetailsFragmentRocketDescriptionHeader">Description</string>
    <string name="rocketDetailsFragmentCostPerLaunchHeader">Cost Per Launch</string>
    <string name="rocketDetailsFragmentSuccessPercentageHeader">Success Percentage</string>
    <string name="rocketDetailsFragmentRocketDetailsErrorMessage">Error fetching rocket details</string>
    <string name="rocketDetailsFragmentRocketLoadingMessage">Loading rocket details</string>
    <string name="rocketDetailsFragmentLaunchesHeader">Launches</string>
    <string name="aboutApp">MoonShot helps you keep up with SpaceX launches. If you like the project, please consider leaving us a great review on the app store.</string>
    <string name="aboutFragmentRateMessage">Rate the app to show your support!</string>
    <string name="aboutFragmentAuthorName">Kshitij Chauhan</string>
    <string name="aboutFragmentRateHeader">Rate</string>
    <string name="aboutFragmentAuthorHeader">Author</string>
    <string name="aboutFragmentRepositoryHeader">Repository</string>
    <string name="fragmentLaunchDetailsLaunchSiteHeader">Launch Site</string>
    <string name="fragmentLaunchSuccessHeader">Launch Status</string>
    <string name="aboutFragmentArchitectureHeader">Vector</string>
    <string name="aboutFragmentArchitectureMessage">This app is built with Vector, a Kotlin Coroutines based MVI architecture library for Android</string>
    <string name="itemCountdownHeaderText">Count Down</string>
    <string name="nextLaunchFragmentCountdownFinishText">Happening now</string>
    <string name="preferencesSyncCategoryTitle">Sync</string>
    <string name="preferencesBackgroundSyncSummary">Allow the app to periodically refresh data in the background</string>
    <string name="preferencesBackgroundSyncTitle">Background Sync</string>
    <string name="preferencesThemeTitle">UI Theme</string>
    <string name="preferencesThemeSummary">Change the colors of the app</string>
</resources>
